--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "3.5",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
+    "bootstrap-tagsinput": "^0.7.1",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
     "normalize.css": "^7.0.0",
