--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: projets_locaux_development
+  database: corpo_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: projets_locaux_test
+  database: corpo_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: projets_locaux_production
-  username: projets_locaux
-  password: <%= ENV['projets_locaux_DATABASE_PASSWORD'] %>
+  database: corpo_production
+  username: corpo
+  password: <%= ENV['corpo_DATABASE_PASSWORD'] %>
