--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: projets_locaux_development
+  database: master_class_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: projets_locaux
+  #username: master_class
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: projets_locaux_test
+  database: master_class_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: projets_locaux_production
-  username: projets_locaux
-  password: <%= ENV['projets_locaux_DATABASE_PASSWORD'] %>
+  database: master_class_production
+  username: master_class
+  password: <%= ENV['master_class_DATABASE_PASSWORD'] %>
